--- a/src/components/CodeBlock.module.css
+++ b/src/components/CodeBlock.module.css
@@ -1,7 +1,7 @@
 .code {
   margin: 1rem 1rem 1rem 1rem;
   position: absolute;
-  width: 50%;
+  width: 50vw;
   animation: Slide_In 1s ease;
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -26,5 +26,10 @@
   100% {
     transform: translateY(-250px);
     display: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .code{
+    width: 90vw;
   }
 }
