--- a/src/components/InputCard.module.css
+++ b/src/components/InputCard.module.css
@@ -12,7 +12,7 @@
   padding: 1rem 4rem 0rem 4rem; /*top right bottom left*/
   font-weight: 800;
   font-size: 3.5rem;
-  width: 40vw;
+
 }
 .card input[type="color"] {
   width: 5rem;
@@ -66,4 +66,10 @@ svg{
 
 .angle_label{
   font-size: 1.25rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .card h1{
+    font-size: 2.5rem;
+  }
 }
