Fixed mobile view

--- a/src/components/InputCard.module.css
+++ b/src/components/InputCard.module.css
@@ -1,18 +1,15 @@
 .card {
-  margin: auto; 
+  margin: auto;
   text-align: center;
-
   background-color: white;
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding-bottom: 2rem;
-
 }
 .card h1 {
   padding: 1rem 4rem 0rem 4rem; /*top right bottom left*/
   font-weight: 800;
   font-size: 3.5rem;
-
 }
 .card input[type="color"] {
   width: 5rem;
@@ -20,8 +17,8 @@
   margin: 0rem 2rem 0.5rem 2rem;
 }
 
-.card p{
-  padding-top : 1rem
+.card p {
+  padding-top: 1rem;
 }
 
 .card input.angle {
@@ -43,33 +40,77 @@ label.colorcode {
   margin: 0rem 1.75rem 3rem 1.75rem;
   font-size: 1.25rem;
 }
-.labels{
+.labels {
   padding-bottom: 2.5rem;
-} 
+}
 
-svg{
+svg {
   padding: 2.5rem 1.5rem 0rem 1.5rem; /*top right bottom left*/
   fill: rgb(66, 63, 63);
 }
 
-.section:hover{
-  fill:black;
+.section:hover {
+  fill: black;
   transform: scale(1.15);
 }
-.section{
+.section {
   transition: all 0.15s;
   transform-origin: 50% 50%;
 }
-.hide{
-  display:none;
+.hide {
+  display: none;
 }
 
-.angle_label{
+.angle_label {
   font-size: 1.25rem;
 }
 
 @media only screen and (max-width: 768px) {
-  .card h1{
+  .card h1 {
     font-size: 2.5rem;
+    padding: 1rem 3rem 1rem 3rem;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .card h1 {
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+  }
+  .angle_label {
+    font-size: 1rem;
+    padding-top: 0rem;
+  }
+  .section {
+    transform: scale(0.7);
+    /* padding: 0rem 1rem 0rem 1rem; */
+  }
+  .section:hover {
+    fill: black;
+    transform: scale(1);
+  }
+  .card input[type="color"] {
+    width: 3rem;
+    height: 1.5rem;
+    margin: 0rem 1rem 0.5rem 1rem;
+  }
+  label.colorcode {
+    font-size: 1rem;
+    margin: 0rem 1rem 0rem 1rem;
+  }
+  svg {
+    padding: 1rem 0.5rem 0rem 1rem; /*top right bottom left*/
+    fill: rgb(66, 63, 63);
+  }
+  .card input.angle {
+    width: 1.5em;
+    border: 2px solid #666;
+    margin-left: 0.5rem;
+    color: #666;
+    border-radius: 10px;
+    padding: 0.2rem;
+    font-size: 1rem;
+  }
+  .labels{
+    padding-bottom: 1.5rem;
   }
 }
