--- a/src/components/InputCard.module.css
+++ b/src/components/InputCard.module.css
@@ -5,6 +5,7 @@
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding-bottom: 2rem;
+  animation: FadeIn ease 1s;
 }
 .card h1 {
   padding: 1rem 4rem 0rem 4rem; /*top right bottom left*/
@@ -48,17 +49,18 @@ svg {
   padding: 2.5rem 1.5rem 0rem 1.5rem; /*top right bottom left*/
   fill: rgb(66, 63, 63);
 }
+.section {
+  transition: all 0.15s;
+  transform-origin: 50% 50%;
+}
 
 .section:hover {
   fill: black;
   transform: scale(1.15);
 }
-.section {
-  transition: all 0.15s;
-  transform-origin: 50% 50%;
-}
+
 .hide {
-  display: none;
+  animation: FadeOut 1s forwards;
 }
 
 .angle_label {
@@ -110,7 +112,30 @@ svg {
     padding: 0.2rem;
     font-size: 1rem;
   }
-  .labels{
+  .labels {
     padding-bottom: 1.5rem;
+  }
+}
+
+@keyframes FadeIn {
+  0% {
+    transform: translateY(-75px);
+    opacity: 0%;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 100%;
+  }
+}
+
+@keyframes FadeOut {
+  0% {
+    transform: translateY(0);
+    opacity: 100%;
+  }
+  100% {
+    transform: translateY(-75px);
+    opacity: 0%;
+    display:none;
   }
 }
